Module name needs quotes b/c includes colon.

--- a/lstrptut_s4rnhy.info.yml
+++ b/lstrptut_s4rnhy.info.yml
@@ -1,7 +1,7 @@
-name: Example Service: Genome Assembly
+name: "Example Service: Genome Assembly"
 type: module
-description: Provides a service for searching genome assemblies stored in Chado.
-package: LS Tripal Tutorials
+description: "Provides a service for searching genome assemblies stored in Chado."
+package: "LS Tripal Tutorials"
 core_version_requirement: ^9 || ^10
 dependencies:
   - tripal
